src/app/styles/globals.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  list-style: none;
  font-family: "Tajawal", sans-serif !important;
}

body.ltr {
  direction: ltr;
}

body.rtl {
  direction: rtl;
}
.fa-brands {
  font-family: "Font Awesome 6 Brands" !important;
}

body {
  background-color: #f2f2f2;
  direction: rtl;
  overflow-x: hidden;
}
@font-face {
  font-family: "Tajawal";
  src: url("/Fonts/Tajawal-Light.ttf");
  font-weight: 300;
}
@font-face {
  font-family: "Tajawal";
  src: url("/Fonts/Tajawal-Regular.ttf");
  font-weight: 400;
}
@font-face {
  font-family: "Tajawal";
  src: url("/Fonts/Tajawal-Medium.ttf");
  font-weight: 600;
}
@font-face {
  font-family: "Tajawal";
  src: url("/Fonts/Tajawal-Bold.ttf");
  font-weight: 800;
}
nav,
.DrawerHeader {
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  color: #292a2a;
}
.couponCode {
  color: #292a2a;
  border: none;
  line-height: 30px;
  margin: 0 auto;
  resize: none;
  outline: none;
  overflow: hidden;
  background: transparent;
  text-align: center;
  font-weight: bold;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  max-width: 100%;
}
.coupon-box-text {
  display: inline-block;
  border-radius: 3px;
  border: 1px dashed #cccccc;
  background-color: #3092493f;
  line-height: 0;
}
iframe {
  width: 100%;
  height: 500px;
}
table {
  width: 100%;
  border-collapse: collapse;
  margin: 25px 0;
  font-size: 18px;
  text-align: left;
  background-color: #f9f9f9;
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
}

table thead tr {
  background-color: #3d6cb9;
  color: #ffffff;
  text-align: left;
  font-weight: bold;
}

table th,
table td {
  padding: 12px 15px;
  border: 1px solid #e0e0e0;
}

table tbody tr {
  border-bottom: 1px solid #dddddd;
  transition: background-color 0.2s ease;
}

table tbody tr:nth-of-type(even) {
  background-color: #f3f3f3;
}

table tbody tr:nth-of-type(odd) {
  background-color: #ffffff;
}

table tbody tr:hover {
  background-color: #d1e0f5;
}

table tbody tr.active-row {
  font-weight: bold;
  color: #3d6cb9;
}

table caption {
  margin: 10px 0;
  font-size: 24px;
  color: #3d6cb9;
  font-weight: bold;
}

